--- a/FadlunProjectFibonacci.html
+++ b/FadlunProjectFibonacci.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </div>
-    <script src="scriptrecursive.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
