--- a/FadlunProjectFibonacci.html
+++ b/FadlunProjectFibonacci.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Milestone4</title>
+<title>Milestone6</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 <link rel="stylesheet" href="styles.css" />
@@ -16,7 +16,17 @@
             <div class="col-md-10 offset-md-2">
                 <p class="text">The Fibonacci of
                     <input class="inputBox" type="number" id="xnumber" placeholder="#">
-                    <button class="button" onclick="getX()">IS</button><span class="result" id="ynumber"></span></p>
+                    <button class="button" onclick="getX()">IS</button>
+                    <span class="result" id="ynumber"></span>
+                    <span class="error" id="errText"></span>
+                </p>
+                <div id="Loader" class="spinner-border text-info loaded" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+
+            </div>
+            <div class="col-md-10 offset-md-2">
+                <div id="50Error" class="tooLarge loaded">Can't be larger than 50</div>
             </div>
         </div>
     </div>
