--- a/FadlunProjectFibonacci.html
+++ b/FadlunProjectFibonacci.html
@@ -30,13 +30,18 @@
             </div>
             <div class="col-md-10 offset-md-2">
                 <div id="resTitle" class="resultTitle">Results</div>
-                <div id="resLoader" class="spinner-border text-info loaded" role="status">
+                <div id="resLoader" class="spinner-border text-info" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
             </div>
-            <div class="col-md-10 offset-md-2"></div>
+            <div class="col-md-8 offset-md-2">
+                <div id="dataArray" class="res-lines">
+                    <p id="content"></span></p>
+
+                </div>
+                <div class="col-md-8 offset-md-2"></div>
+            </div>
         </div>
-    </div>
     </div>
     <script src="script.js"></script>
 </body>
