--- a/FadlunProjectFibonacci.html
+++ b/FadlunProjectFibonacci.html
@@ -35,8 +35,8 @@
                 </div>
             </div>
             <div class="col-md-8 offset-md-2">
-                <div id="dataArray" class="res-lines">
-                    <p id="content"></span></p>
+                <div id="dataArray">
+
 
                 </div>
                 <div class="col-md-8 offset-md-2"></div>
