--- a/FadlunProjectFibonacci.html
+++ b/FadlunProjectFibonacci.html
@@ -27,6 +27,12 @@
             </div>
             <div class="col-md-10 offset-md-2">
                 <div id="50Error" class="tooLarge loaded">Can't be larger than 50</div>
+                <div class="flexible">
+                    <div>
+                        <input id="checkbox" class="checkbox" type="checkbox" />
+                        <span class="checkText">Save Calculation</span>
+                    </div>
+                </div>
             </div>
             <div class="col-md-10 offset-md-2">
                 <div id="resTitle" class="resultTitle">Results</div>
